unpackaged/objects/Questions__c.object
<CustomObject>
  <fields>
    <fullName>Product_Line2__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Product_Line</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Not SBU-Specific</fullName>
          <default>true</default>
          <label>Not SBU-Specific</label>
        </value>
        <value>
          <fullName>CAD/CAM</fullName>
        </value>
        <value>
          <fullName>CAD/CAM - Nazaré</fullName>
        </value>
        <value>
          <fullName>CAD/CAM - CEREC</fullName>
        </value>
        <value>
          <fullName>CAD/CAM - InLab</fullName>
        </value>
        <value>
          <fullName>Imaging</fullName>
        </value>
        <value>
          <fullName>Imaging - Extra Oral</fullName>
        </value>
        <value>
          <fullName>Imaging - Intra Oral</fullName>
        </value>
        <value>
          <fullName>Instruments</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>PREP</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Imaging - 2D</fullName>
        </value>
        <value>
          <fullName>Imaging - 3D</fullName>
        </value>
        <value>
          <fullName>Laboratory</fullName>
        </value>
        <value>
          <fullName>Consumables</fullName>
        </value>
        <value>
          <fullName>Digital</fullName>
        </value>
        <value>
          <fullName>Digital Group</fullName>
        </value>
        <value>
          <fullName>Equipment</fullName>
        </value>
        <value>
          <fullName>Equipment &amp; Imaging</fullName>
        </value>
        <value>
          <fullName>Class II</fullName>
        </value>
        <value>
          <fullName>Single Unit Crown</fullName>
        </value>
        <value>
          <fullName>Root To Crown</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Question_Body__c</fullName>
    <label>Question Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Question_Order__c</fullName>
    <label>Question Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Multiselect Checkbox</fullName>
        </value>
        <value>
          <fullName>Picklist</fullName>
        </value>
        <value>
          <fullName>Yes/No Radio Buttons</fullName>
          <label>Radio Buttons</label>
        </value>
        <value>
          <fullName>Free Text</fullName>
        </value>
        <value>
          <fullName>Yes/No/Other</fullName>
          <label>Choice 1/Choice 2/Other</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Questionnaire_Setup__c</fullName>
    <label>Questionnaire Setup</label>
    <referenceTo>Questionnaire_Setup__c</referenceTo>
    <relationshipLabel>Questions List</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Required_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Question</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Responses__c</fullName>
    <label>Responses</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Inactive</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Question</label>
  <nameField>
    <displayFormat>Q{00000}</displayFormat>
    <label>Questions Id</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Questions</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
  <validationRules>
    <fullName>Is_the_Product_Line_Available</fullName>
    <active>true</active>
    <errorConditionFormula>(Ispickval(Product_Line__c,"Not SBU-Specific") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Not SBU-Specific" ))) ||
(Ispickval(Product_Line__c,"CAD/CAM") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"CAD/CAM" ))) ||
(Ispickval(Product_Line__c,"CAD/CAM - CEREC") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"CAD/CAM - CEREC" ))) ||
(Ispickval(Product_Line__c,"CAD/CAM - InLab") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"CAD/CAM - InLab" ))) ||
(Ispickval(Product_Line__c,"Imaging") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Imaging" ))) ||
(Ispickval(Product_Line__c,"Imaging - Extra Oral") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Imaging - Extra Oral" ))) ||
(Ispickval(Product_Line__c,"Imaging - Intra Oral") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Imaging - Intra Oral" ))) ||
(Ispickval(Product_Line__c,"Instruments") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Instruments" ))) ||
(Ispickval(Product_Line__c,"Treatment Centers") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Treatment Centers" ))) ||
(Ispickval(Product_Line__c,"Endodontics") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Endodontics" ))) ||
(Ispickval(Product_Line__c,"Prosthetics") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Prosthetics" ))) ||
(Ispickval(Product_Line__c,"Preventive") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Preventive" ))) ||
(Ispickval(Product_Line__c,"Implants") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Implants" ))) ||
(Ispickval(Product_Line__c,"Restorative") &amp;&amp; NOT(Includes(Questionnaire_Setup__r.Product_Line__c,"Restorative" )))</errorConditionFormula>
    <errorDisplayField>Product_Line__c</errorDisplayField>
    <errorMessage>This Product Line wasn't selected in the Questionnaire Setup</errorMessage>
  </validationRules>
</CustomObject>